data/derived/sp14/progs/unify/prog0223.ml.out
Characters 193-206:
  | h::t -> let rec helper v = (helper v/10) @ h1 mod 10 :: []
                               ^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
